# notepad-in-pyqt5

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  ruff.toml  run.py
app/: config.py  main.py  utils.py
commands/: export.sh
src/: main.py
